@@ -1,3 +1,9 @@
+2013-03-22	Anton Kolesov <anton.kolesov@synopsys.com>
+
+	* run-elf32-tests.sh: Fix invalid reference to GDB build directory. GDB
+	used to be built in separate directory but test script was still trying to
+	use the old directory.
+
 2013-03-18  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
 	* build-all.sh: Add --big-endian to help.
